infrastructure/k8s/apps/argocd/ingress-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.unique.rocks
      secretName: wildcard-cert-dns-tls
  rules:
    - host: argocd.unique.rocks
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
